--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "workbench.colorTheme": "Darcula Pycharm with Dark GUI",
+    "workbench.colorTheme": "Community Material Theme Darker High Contrast",
     "liveServer.settings.port": 5501
 }
